--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -49,6 +49,11 @@
           <label for="informe">Informes</label>
           <ul class="nav-list">
             <li>
+              <a routerLink="./informes/informe-contrato"
+                 class="nav-link" routerLinkActive="active">Contratos
+              </a>
+            </li>
+            <li>
               <a routerLink="./informes/informe-equipo"
                  class="nav-link" routerLinkActive="active">Equipos
               </a>
