--- a/client-app/src/app/home/contrato/lista-contrato/lista-contrato.component.html
+++ b/client-app/src/app/home/contrato/lista-contrato/lista-contrato.component.html
@@ -39,12 +39,12 @@
   <clr-datagrid [clrDgLoading]="loading">
     <clr-dg-action-bar>
       <div class="clr-row clr-justify-content-start clr-col-12">
-        <div class="clr-col-5">
+        <div class="clr-col-12">
           <div class="form-group row">
             <div class="col-4">
               <label class="form-filter-label">Estado Contrato:</label>
             </div>
-            <div class="col-4">
+            <div class="col-4 margin-col-input">
               <div class="select form-control">
                 <select class="select-form-equipo" id="estadoContrato" #selectEstadoContrato name="estadoContrato"
                         [(ngModel)]="estadoContrato"
@@ -56,30 +56,28 @@
                 </select>
               </div>
             </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-4">
+            <div class="col-4 margin-col-label">
               <label class="form-filter-label">Tipo Procedimiento:</label>
             </div>
-            <div class="col-4">
+            <div class="col-4 margin-col-input">
               <input class="form-control" id="tipoProc"
                      name="tipo" [(ngModel)]="tipoProcedimiento">
+            </div>
+            <div class="clr-col-2 margin-col-btn">
+              <a class="btn btn-sm btn-primary" (click)="filtrarContrato()">
+                <clr-icon shape="search"></clr-icon>
+              </a>
             </div>
           </div>
           <div class="form-group row">
             <div class="col-4">
               <label class="form-filter-label" for="nroContrato">Nro. Contrato:</label>
             </div>
-            <div class="col-4">
+            <div class="col-4 margin-col-input">
               <input class="form-control" id="nroContrato"
                      name="nroContrato" [(ngModel)]="numeroContrato">
             </div>
           </div>
-        </div>
-        <div class="clr-col-2">
-          <a class="btn btn-sm btn-primary" (click)="filtrarContrato()">
-            <clr-icon shape="search"></clr-icon>
-          </a>
         </div>
         <div class="clr-col-12">
           <div class="clr-form-control clr-row">
