Se agregó el método que actualiza el estado del equipo

--- a/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
+++ b/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
@@ -38,8 +38,8 @@
   <clr-datagrid [clrDgLoading]="loading">
     <clr-dg-action-bar>
       <div class="clr-row clr-justify-content-start clr-col-12">
-        <div class="clr-col-4">
-          <div class="form-group row flex-items-xs-center">
+        <div class="clr-col-5">
+          <div class="form-group row flex-items-xs-left">
             <div class="col-3">
               <label class="form-filter-label">Tipo:</label>
             </div>
@@ -55,7 +55,7 @@
               </div>
             </div>
           </div>
-          <div class="form-group row flex-items-xs-center">
+          <div class="form-group row flex-items-xs-left">
             <div class="col-3">
               <label class="form-filter-label">Marca/Modelo:</label>
             </div>
@@ -72,8 +72,8 @@
               </div>
             </div>
           </div>
-          <div class="form-group row flex-items-xs-center">
-            <div class="col-2">
+          <div class="form-group row flex-items-xs-left">
+            <div class="col-3">
               <label class="form-filter-label">Ubicación:</label>
             </div>
             <div class="col-4">
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="clr-col-5">
-          <div class="form-group row flex-items-xs-center">
+          <div class="form-group row flex-items-xs-left">
             <div class="col-3">
               <label class="form-filter-label">Estado Equipo:</label>
             </div>
@@ -108,7 +108,7 @@
               </div>
             </div>
           </div>
-          <div class="form-group row flex-items-xs-center">
+          <div class="form-group row flex-items-xs-left">
             <div class="col-4">
               <label class="form-filter-label">Estado Contrato:</label>
             </div>
