--- a/client-app/src/app/home/mantenimiento/orden-trabajo/atender-orden-trabajo/atender-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/atender-orden-trabajo/atender-orden-trabajo.component.html
@@ -110,8 +110,8 @@
       </div>
       <div class="col-xs-4">
         <label class="form-control">
-          {{equipo?.ubicacion.servicio}} {{equipo.ubicacion.bloque}}
-          {{equipo?.ubicacion.nivel}} {{equipo.ubicacion.numeroSala}}
+          {{equipo?.ubicacion?.servicio}} {{equipo.ubicacion?.bloque}}
+          {{equipo?.ubicacion?.nivel}} {{equipo.ubicacion?.numeroSala}}
         </label>
       </div>
 
@@ -120,7 +120,7 @@
       </div>
       <div class="col-xs-4">
         <label class="form-control">
-          {{equipo.contrato.numeroContrato}}
+          {{equipo.contrato?.numeroContrato}}
         </label>
       </div>
     </div>
