--- a/client-app/src/app/shared/solicitud-detalle/solicitud-repuesto-detalle/solicitud-repuesto-detalle.component.html
+++ b/client-app/src/app/shared/solicitud-detalle/solicitud-repuesto-detalle/solicitud-repuesto-detalle.component.html
@@ -81,7 +81,7 @@
                 <label class="form-repuesto-label" for="cantidadAd">Cant. Adquirida:</label>
               </div>
               <div class="col-xs-5">
-                <input class="form-control" id="cantidadAd" disabled type="text"
+                <input class="form-control" id="cantidadAd" type="text"
                        name="cantidadAd" [(ngModel)]="cantAdquirida">
               </div>
             </div>
