--- a/client-app/src/app/home/mantenimiento/repuestos/lista-repuestos/lista-repuestos.component.html
+++ b/client-app/src/app/home/mantenimiento/repuestos/lista-repuestos/lista-repuestos.component.html
@@ -24,8 +24,8 @@
   <clr-datagrid [clrDgLoading]="loading">
     <clr-dg-action-bar>
       <div class="clr-row clr-justify-content-start clr-col-12">
-        <div class="clr-col-4">
-          <div class="form-group row flex-items-xs-center">
+        <div class="clr-col-3">
+          <div class="form-group row flex-items-xs-left">
             <div class="col-3">
               <label class="form-filter-label">Tipo:</label>
             </div>
@@ -42,8 +42,9 @@
             </div>
           </div>
         </div>
-        <div class="clr-col-4">
-          <div class="form-group row flex-items-xs-center">
+
+        <div class="clr-col-6">
+          <div class="form-group row flex-items-xs-left">
             <div class="col-3">
               <label class="form-filter-label">Marca/Modelo:</label>
             </div>
@@ -59,16 +60,17 @@
                 </select>
               </div>
             </div>
+            <div class="clr-col-2">
+              <a class="btn btn-sm btn-primary" (click)="filtrarRepuesto()">
+                <clr-icon shape="search"></clr-icon>
+              </a>
+            </div>
           </div>
         </div>
-        <div class="clr-col-2">
-          <a class="btn btn-sm btn-primary" (click)="filtrarRepuesto()">
-            <clr-icon shape="search"></clr-icon>
-          </a>
-        </div>
+
         <div class="clr-row clr-col-12">
           <div class="clr-col-4">
-            <div class="form-group row flex-items-xs-center">
+            <div class="form-group row flex-items-xs-left">
               <div class="col-3">
                 <label class="form-filter-label">Estado Equipo:</label>
               </div>
@@ -77,7 +79,7 @@
                   <select class="select-form-equipo" id="estadoEquipo" #selectedEstadoEquipo
                           name="estadoEquipo" [(ngModel)]="estadoEquipo"
                           (change)="onSelectedEstadoEquipo(selectedEstadoEquipo.value)">
-                    <option disabled>Filtrar por Estado Equipo</option>
+                    <option>Filtrar por Estado Equipo</option>
                     <option>Operativo</option>
                     <option>Inoperativo</option>
                     <option>Irreparable</option>
